# CHMD

./: .gitignore  LICENSE  Readme.md
Data/: readme.txt
Data/AddMagn/: aa0.vtk  ao0.vtk  ba0.vtk  ba1.vtk  bo0.vtk  bo1.vtk  f0.vtk  f1.vtk  f2.vtk  f3.vtk  f4.vtk  m0.vtk
Data/Biceps/: aa0.vtk  ab0.vtk  ao0.vtk  ba0.vtk  ba1.vtk  bb0.vtk  bb1.vtk  bo0.vtk  bo1.vtk  f0.vtk  f1.vtk  f2.vtk  f3.vtk  f4.vtk  f5.vtk  m0.vtk
Data/ComplexY/: f0.vtk  m0.vtk
Data/Cylinder/: aa0.vtk  ba0.vtk  f0.vtk  m0.vtk
Data/Elipse/: aa0.vtk  ba0.vtk  f0.vtk  m0.vtk
Data/GlutMax/: aa0.vtk  aa1.vtk  ab0.vtk  ao0.vtk  ao1.vtk  ba0.vtk  bo0.vtk  f0.vtk  f1.vtk  f2.vtk  f3.vtk  m0.vtk
Data/GlutMed/: aa0.vtk  ab0.vtk  ao0.vtk  at0.vtk  ba0.vtk  bb0.vtk  bo0.vtk  bt0.vtk  f0.vtk  m0.vtk  tendons.vtk
Data/Iliacus/: aa0.vtk  ao0.vtk  ba0.vtk  bo0.vtk  f0.vtk  f1.vtk  f2.vtk  f3.vtk  m0.vtk
Data/Muscle1/: aa0.vtk  ba0.vtk  f0.vtk  m0.vtk
Data/RectFem/: aa0.vtk  ab0.vtk  ao0.vtk  ba0.vtk  bo0.vtk  f0.vtk  f1.vtk  f2.vtk  f3.vtk  m0.vtk
Data/Torus/: aa0.vtk  ba0.vtk  f0.vtk  m0.vtk
Sources/: CMakeLists.txt
Sources/vtkMuscleDecomposition/: CMakeLists.txt
Sources/vtkMuscleDecomposition/FibreLibrary/: CMakeLists.txt  hungarian.c  memdebug.h  vtkCatmullRomSpline.cxx  vtkCatmullRomSpline.h  vtkLHPMuscleFibresAnalysisFilter.cpp  vtkLHPMuscleFibresMath.h  vtkLHPMuscleFibresResample.h  vtkLHPPolyLinesBuilder.cpp  vtkLHPPolyLinesBuilder.h  vtkLHPSetGet.h  vtkMAFPolyDataCutOutFilterEx.cxx  vtkMapperActor.h  vtkMuscleDecomposer.h  vtkMuscleDecomposerSplineInterpolator.h  vtkMuscleDecomposerUtils.cpp  vtkMuscleDecomposerUtils.h  vtkParametricCatmullRomSpline.cxx  vtkParametricCatmullRomSpline.h  vtkParametricCatmullRomSurface.cxx  vtkParametricCatmullRomSurface.h  vtkTriangleMeshLaplacianDeformation.cpp
Sources/vtkMuscleDecomposition/src/: CMakeLists.txt
Sources/vtkMuscleDecomposition/src/FibreLibrary/: CMakeLists.txt  DCUtils.cpp  DCUtils.h  Fiber.cpp  Fiber.h  Point.cpp  Point.h  SplineInterpolator.cpp  SplineInterpolator.h  csparse.c  csparse.h  vtkLHPMuscleFibresAnalysisFilter.h  vtkLHPMuscleFibresMath.cpp  vtkLHPMuscleFibresResample.cpp  vtkMAFPolyDataCutOutFilterEx.h  vtkMapperActor.cpp  vtkMuscleDecomposer.cpp  vtkMuscleDecomposerSplineInterpolator.cpp  vtkTriangleMeshLaplacianDeformation.h
Sources/vtkMuscleDecomposition/src/vtkMuscleDecomposition/: CMakeLists.txt  demoApp.cpp  stdafx.cpp
Sources/vtkMuscleDecomposition/vtkMuscleDecomposition/: demoApp.h
